# handanim-2

./: .coverage  .gitignore  README.md  _internals.md  dev-requirements.txt  plan-manim-transform-mapping.md  prompt.md  pyproject.toml  test.ipynb
docs/source/: handanim.animations.rst  handanim.primitives.rst
examples/: a_plus_b_square.py  audio_sync_demo.py  custom_font.py  distributive_property.py  eraser_gpu_demo.py  flowchart_demo.py  latex_math_demo.py  media_demo.py  morph_demo.py  new_animations_demo.py  photosynthesis_scene_audio.py  pythagoras.py  solar_system.py  table_demo.py  tan_graph.py  text_autofit_demo.py  three_d_demo.py  transform_gallery.py  transform_showcase.py  tts_in_add_demo.py
src/handanim/: __init__.py
src/handanim/animations/: __init__.py  bounce.py  effects.py  fade.py  morph.py  rotate.py  scale.py  sketch.py  slide.py  static.py  three_d.py  transform.py  translate.py  zoom.py
src/handanim/core/: __init__.py  animation.py  audio.py  camera_3d.py  draw_ops.py  drawable.py  scene.py  scene_3d.py  styles.py  utils.py  viewport.py
src/handanim/primitives/: __init__.py  arrow.py  curves.py  ellipse.py  eraser.py  flowchart.py  lines.py  math.py  media.py  polygons.py  svg.py  table.py  text.py  three_d.py  vector_svg.py
src/handanim/stylings/: color.py  fillpatterns.py  fonts.py  strokes.py  utils.py
src/handanim_ai/: models.py
src/handanim_ai/prompts/: big_picture.txt  codegen.txt
tests/: placeholder.py  test_arrows.py  test_audio_voiceover.py  test_eraser.py  test_flowchart.py  test_math.py  test_media.py  test_morph.py  test_scene_caching.py  test_sketch_animation.py  test_table.py  test_text.py  test_three_d.py  test_transform_compat.py
utils/: check_fonts.py
utils/fontmaker/: make_fonts.py  make_grid_sheet.py
